[package]
name = "a-cli-tool"
version = "0.1.0"
authors = ["tarquin-the-brave <tomsteavenson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
serde = { version = "1.0.117", features = [ "derive" ] }
serde_yaml = "0.8.13"
structopt = "0.3.20"
semver = { version = "0.11.0", features = ["serde"] }
schemars = { version = "0.8.0", features = ["preserve_order"] }
serde_json = "1.0.59"
